# mini-programs

./: README.md
Sources/: 1.cpp  2.cpp  22.c  3.cpp  4.cpp  6.cpp
Sources/C/: 10.c  11.c  13.c  15.c  17.c  19.c  21.c  22.c  23.c  24.c  25.c  26.c  27.c  28.c  29.c  9.c
Sources/C/30/: .gitignore  CMakeLists.txt
Sources/C/30/shaders/: defaultF.shader  defaultV.shader
Sources/C/30/src/: main.c
Sources/CPP/: 1.cpp  12.cpp  14.cpp  16.cpp  4.cpp  5.cpp  7.cpp
Sources/Rust/: 9.rs
